# secure-agents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.sandbox  README.md  config.example.yaml  pyproject.toml  setup.sh  setup_manifest.yaml
.claude/: agent-development.md
docs/: adding_agents.md  doc_sort_pipeline.md  tool_development.md  troubleshooting.md
src/secure_agents/: __init__.py  __main__.py  cli.py
src/secure_agents/agents/_template/: agent.py
src/secure_agents/core/: __init__.py  agent_status.py  base_agent.py  base_provider.py  base_tool.py  builder.py  config.py  credential_backends.py  credentials.py  job_queue.py  logger.py  message_builder.py  metrics.py  metrics_store.py  registry.py  sandbox.py  schemas.py  security.py  trigger_manager.py  triggers.py  validator.py
src/secure_agents/providers/: anthropic_provider.py  gemini_provider.py  llamacpp.py  ollama.py  openai_compat.py  openai_provider.py
src/secure_agents/setup/: __init__.py  manifest.py  runner.py  steps.py
src/secure_agents/tools/: __init__.py  _template.py  document_parser.py  email_reader.py  email_sender.py  file_manager.py  file_storage.py  text_extractor.py
src/secure_agents/ui/: __init__.py  dashboard.html  server.py
tests/: test_agent_sequencing.py  test_config.py  test_credential_backends.py  test_deduplicator.py  test_doc_sorter.py  test_file_manager.py  test_job_queue.py  test_message_builder.py  test_metrics.py  test_nda_reviewer.py  test_providers.py  test_registry.py  test_schemas.py  test_security.py  test_text_extractor.py  test_tools.py  test_validator.py
(+10 files in other folders)
